revolutionary_refactoring: add route profile/permissions. change default user factory password. change documents service and controller for tests
