# app/Http/Controllers/PermissionController.php
@@ -3,7 +3,9 @@
 namespace App\Http\Controllers;
 
 use App\Http\Requests\Permissions\IndexPermissionRequest;
+use App\Http\Utils\UserPermissionUtil;
 use App\Repositories\PermissionRepository;
+use Illuminate\Http\Request;
 
 /**
  * Class AdminActionsController
@@ -12,10 +14,22 @@ use App\Repositories\PermissionRepository;
 class PermissionController extends Controller
 {
     private PermissionRepository $permissionRepository;
+    private UserPermissionUtil $userPermissionUtil;
 
-    public function __construct(PermissionRepository $permissionRepository)
-    {
+    public function __construct(
+        PermissionRepository $permissionRepository,
+        UserPermissionUtil $userPermissionUtil
+    ){
         $this->permissionRepository = $permissionRepository;
+    }
+
+    public function profilePermissions(Request $request)
+    {
+        $result = [];
+        try {
+            $result = $this->userPermissionUtil->getUserPermissions($request->user()->id);
+        } catch (\Throwable $exception) {}
+        return response($result, 200);
     }
 
     public function index(IndexPermissionRequest $request)
